styles/home.css
.raleway-normal {
  font-family: "Raleway", sans-serif;
  font-optical-sizing: auto;
  font-style: normal;
}

.inter-normal {
  font-family: "Inter", sans-serif;
  font-optical-sizing: auto;
  font-style: normal;
}

*{
    margin: 0;
}

body{
    align-items: center;
}

main{
    background-color: #f5f8ff;
}

/* Shared Styles */
.btn-primary{
    background-color: #4E47FF;
    color: white;
    font-size: 16px;
    font-weight: 700;
    padding: 12px 36px;
    border: none;
    border-radius: 10px;
    transition: 0.4s;
    transition-timing-function: ease-in-out;
}

.btn-primary:hover{
    background-color: #2c25fd;
    transition: 0.4s;
    transition-timing-function: ease-in-out;
    cursor: pointer;
}

.text-title{
    font-size: 42px;
    font-weight: 700;
    color: #252432;
}

.body-text{
    font-size: 24px;
    color: rgba(37, 36, 50, 0.5);
}

/* Header Styles */
header{
    background-image: url(/B12A01-landing-launchpad-dha/Assets/Hero-bg.png);
    text-align: center;
    justify-content: center;
}

/* Navbar Styles */
nav{
    display: flex;
    align-items: center;
    justify-content: space-between;
    padding: 50px 150px;
}

.logo{
    font-size: 34px;
    font-weight: 900;
    margin: 0px;
    color: #4E47FF;
}

/* Hero Section Styles */
.hero{
    display: block;
    text-align: center;
    max-width: 905px;
    padding: 150px 0;
    margin-left: auto;
    margin-right: auto;
}

.hero-text{
    font-size: 65px;
    font-weight: 700;
    color: #252432;
    margin-bottom: 37px;
}

/* Action Section Styles */
.action-section{
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 150px 116px;
}

.action-section-left{
    width: 500px;
}

.action-section-left p{
    margin: 23px 0;
}

.action-section-right img{
    max-width: 400px;
    border-radius: 48px;
}

/* Productive User Section Styles */
.prod-user-sec{
    background-color: rgba(78, 71, 255, 0.1);
    margin: 0 150px;
    padding: 50px 80px;
    border-radius: 24px;
    text-align: center;
}

.user-stat-container{
    display: flex;
    justify-content: space-between;
    gap: 152px;
    margin-top: 40px;
}

.prod-user-sec h2{
    font-size: 38px;
}

.stat h1{
    font-size: 80px;
    font-weight: 700;
    color: #4E47FF;
}

.stat p{
    font-size: 20px;
    color: rgba(0, 0, 0, 0.5);
}

/* Review Section */
.review-section{
    text-align: center;
    padding: 137px 150px;
}

.review-cards{
    display: flex;
    margin-top: 50px;
    justify-content: space-between;
    gap: 20px;
}

.review-cards{
    text-align: left;
}

.review-card{
    padding: 24px;
    background-color: white;
    border-style: solid;
    border-width: 1px;
    border-color: #F2EDED;
    border-radius: 14px;
}

.rating-container img{
    max-width: 20px;
    margin-right: 4px;
}

.review-title{
    font-size: 24px;
    color: rgba(30, 30, 30, 1);
    margin-top: 24px;
    margin-bottom: 8px;
}

.review-text{
    font-size: 16px;
    color: rgba(30, 30, 30, 1);
}

.user-card{
    display: flex;
    gap: 12px;
    margin-top: 24px;
    align-items: center;
}

.user-card img{
    max-width: 40px;
    border-radius: 40px;            
}

.user-name{
    font-size: 16px;
    font-weight: 600;
    color: rgb(94, 94, 94);
}

.user-info p{
    font-size: 16px;
    color: gray;
}

/* Second Hero Styles */
.second-hero{
    margin: 0 150px;
    padding: 71px 150px;
    background-color: white;
    text-align: center;
    border-radius: 14px;
}

.second-hero p{
    font-size: 16px;
    color: rgba(0, 0, 0, 0.5);
    margin: 20px auto;
}

.second-hero button{
    display: block;
    margin: 0 auto;
}

.second-hero img{
    max-width: 840px;
    margin: 20px auto 0;
    border-radius: 48px;
}

/* Contact Section Styles */
.contact-section{
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 72px 150px;
}

.contact-section h2{
    font-size: 97px;
    font-weight: 700;
}

.form-container{
    width: 500px;
}

.form-container label{
    display: block;
    font-size: 18px;
    margin-bottom: 10px;
}

.form-container form input[type="text"],
.form-container form input[type="email"],
.form-container form textarea{
    display: block;
    font-size: 19px;
    width: 100%;
    padding: 20px 32px;
    margin: 0 auto 16px;
    background-color: white;
    border-style: solid;
    border-width: 1px;
    border-color: #D6DDED;
    border-radius: 10px;
    box-sizing: border-box;
}

.form-container input[type="submit"]{
    display: block;
    width: 100%;
    padding: 19px 32px;
}

/* Footer Styles */
footer{
    padding: 100px 150px;
    text-align: center;
    background-color: white;
    border-style: solid;
    border-width: 1px;
    border-color: #D6DDED;
}

footer h1{
    font-size: 100px;
    font-weight: 900;
    color: #4E47FF;
}

footer p{
    font-size: 16px;
    color: #8987A1; 
    text-align: center;
    width: 530px;  
    margin: 0 auto 15px;
}

footer ul{
    width: 400px;
    display: flex;
    justify-content: space-between;
    margin: 0 auto;
}

footer ul li{
    list-style: none;
}

footer ul li a{
    text-decoration: none;
    color: #8987A1;
    transition: 0.4s;
}

footer ul li a:hover{
    text-decoration: none;
    color: #2c25fd;
    transition: 0.4s;
}

